[build-system]
requires = ["setuptools>=82.0.1,<83", "setuptools-scm", "packaging>=26.2,<27"]
build-backend = "setuptools.build_meta"

[project]
name = "nexthink_api"
authors = [{name = "Laurent Taupiac", email = "ltaupiac@lfdj.com"}]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
dynamic = ["version"]
description = "Python package for Nexthink API"
requires-python = ">=3.11"
keywords=["nexthink", "nql", "enrichment"]
dependencies=[
    "requests>=2.33.0,<3",
    "urllib3>=2.7.0,<3",
    "pydantic>=2.13.4,<3",
    "pandas>=2.3.3,<4",
    "truststore>=0.10.0",
    "idna>=3.15,<4",
    "certifi>=2024.7.4",
]
readme = "README.md"

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.15.15,<0.16",
  "bump-my-version>=1.3.0,<2",
  "pip>=26.1.2,<27",
  "pip-autoremove>=0.10.0",
  "twine>=6.2.0,<7",
  "pylint>=4.0.5,<5",
  "pytest-env>=1.6.0,<2",
  "pytest-mock>=3.15.1,<4",
  "rich>=15.0.0,<16",
  "mkdocs>=1.6.1,<2",
  "mkdocs-autorefs>=1.4.4,<2",
  "mkdocs-material>=9.7.6,<10",
  "mkdocstrings>=1.0.4,<2",
  "mkdocstrings-python>=2.0.3,<3",
  "mkdocs-latest-git-tag-plugin>=0.1.2",
  "GitPython>=3.1.50,<4",
  "Jinja2>=3.1.6,<4",
  "Markdown>=3.8.1,<4",
]

[tool.setuptools_scm]
version_file = "src/nexthink_api/_version.py"
git_describe_command="git describe --tags"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nexthink_api*"]
namespaces = false

[project.urls]
Documentation = "https://developer.nexthink.com/docs/api/"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit", "tests/integration"]
env = [
    "NEXTHINK_API_TESTS_DATA=tests"
]
addopts = ["--assert=plain", "-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true 
filterwarnings = ["error"]
log_cli_level = "info"
markers = [
    "integration: optional tests that call a real Nexthink tenant",
]

[tool.ruff.lint]
select = [
    "D",     # pydocstyle
    "PL",    # Pylint
    "E",     # pycodestyle
    "W",     # pycodestyle
    "F",     # pyflakes
    "C90",   # mccabe
    "ANN",   # flake8-annotations
    "N",     # pep8-naming
]
ignore = [
    "D417",     # Missing argument descriptions in the docstring
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the first line
    "ANN204",   # Missing return type annotation for special method `__init__`
    "PLR6301",  # Method could be a static method
]

[tool.ruff]
line-length  = 120
preview=true
exclude = [
    "tests",
    "venv",
    ".venv",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
